# telepathy-gadugadu

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  configure.ac
data/: Makefile.am  gadugadu.manager  gadugadu.service.in
src/: Makefile.am  connection-aliasing.c  connection-aliasing.h  connection-manager.c  connection-manager.h  connection-presence.c  connection-presence.h  connection.c  connection.h  contact-list.c  contact-list.h  contact.c  contact.h  debug.c  debug.h  im-channel.c  im-channel.h  im-manager.c  im-manager.h  main.c  protocol.c  protocol.h
